# IZDU-Slicer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PRODUCT.md  README.md  build.rs
proto/: izdu.proto
resources/: LICENSE.md
src/: grpc.rs  image_slicer.rs  img.rs  main.rs  tests.rs
src/grpc/: grpc_server.rs
src/image_processor/: image_slicer.rs  mod.rs  resize.rs  watermark.rs
