[package]
name = "image_split"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web="4"
futures = "0.3"
image = "0.24.6"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
imageproc = "0.23"
rusttype = "0.9"
base64 = "0.21"
bytes = "1"
actix-service = "2"

[dev-dependencies]
actix-rt = "2"
actix-service = "2"
tokio = { version = "1", features = ["full"] }